# chess-self-coach

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  README.md  ROADMAP.md  claude.sh  config.example.json  index.html  install.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  training_data.json
.claude/: CLAUDE.md  settings.json
.claude/agents/: chess-position-analyst.md
.claude/commands/: analyze.md  collect-classifier-data.md  cpush.md  data-for-classifier.md  fix-issues.md  optimize-classifier.md  pull-lichess.md  push-lichess.md  review-training.md  rloop.md  sync-status.md
.claude/hooks/: check-docs-on-stop.sh  check-flows-on-stop.sh  check-readme-on-stop.sh  check-readme-sync.sh  check-review-training-on-stop.sh  check-review-training.sh
.github/workflows/: ci.yml  deploy.yml
api/: index.html
cli/: index.html
coaching/: INDEX.md
coaching/topics/: 2026-03-15-budapest-gambit.md  2026-03-15-en-croissant-role.md  2026-03-15-english-opening-response.md  2026-03-15-pawn-push-tendency.md
data/: classifications_data.json  pipeline_status.json  training_data.json
docs/: 404.html  api.md  cli.md  index.html  index.md  objects.inv  setup.md  sitemap.xml  training.md
docs/api/: index.html
docs/cli/: index.html
docs/flows/: coming-soon-flows.md  data-flows.md  index.md  meta-flows.md  user-flows.md  (+1 more)
guides/: guide_lichess_study.md
landing/: index.html
pgn/: repertoire_blancs_gambit_dame_annote.pgn  repertoire_noirs_vs_d4_slave_annote.pgn  repertoire_noirs_vs_e4_scandinave_annote.pgn
pwa/: app.js  index.html  manifest.json  style.css  sw.js
scripts/: add_ground_truth_game.py  collect_classifier_data.py  regenerate_ground_truth.py  review_texts.py  sweep_classifier.py
search/: search_index.json
setup/: index.html
tests/: conftest.py  test_analysis_settings.py  test_analyze.py  test_analyze_games.py  test_classifier.py  test_cli.py  test_collect_game.py  test_config.py  test_derive.py  test_importer.py  test_lichess.py  test_opening_explorer.py  test_pipeline_status.py  test_resume.py  test_server.py  test_syzygy.py  test_tablebase.py  test_tactics_single.py  test_trainer.py  test_training_data.py  test_training_texts.py  test_updater.py  test_validate.py
train/: app.js  index.html  manifest.json  style.css  sw.js
(+65 files in other folders)
