[project]
name = "chess-self-coach"
version = "0.1.10"
description = "CLI to manage a chess opening repertoire: Stockfish analysis + Lichess Study sync"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.0,<2",
    "berserk>=0.14.0,<1",
    "python-dotenv>=1.0.0,<2",
    "chess.com>=3.0.0,<4",
]

[project.scripts]
chess-self-coach = "chess_self_coach.cli:main"

[dependency-groups]
test = ["pytest", "pytest-mock", "pytest-playwright"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
