[project]
name = "chess-self-coach"
version = "0.4.15"
description = "Learn from your own chess mistakes: Stockfish analysis + spaced repetition training"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.0,<2",
    "berserk>=0.14.0,<1",
    "python-dotenv>=1.0.0,<2",
    "chess.com>=3.0.0,<4",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.34.0,<1",
    "sse-starlette>=3.3.3",
    "pyyaml>=6.0",
    "optuna>=4.8.0",
]

[project.scripts]
chess-self-coach = "chess_self_coach.cli:main"

[dependency-groups]
test = ["pytest", "pytest-mock", "pytest-playwright", "pytest-xdist", "httpx"]
dev = ["basedpyright"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[tool.pytest.ini_options]
addopts = "-n auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
